# libehbigint

./: .gitignore  .gitmodules  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.old  README  TODO  bi-add.c  bi-calc.c  configure.ac  configure.scan  ehbigint.c  ehbigint.h  test-ehbigint.c
demos/: bi-calc.c
ehbigint_arduino_tests/: ehbigint.h  ehbigint_arduino_tests.ino  ehstr.cpp  test-add.cpp  test-bytes-shift-left.cpp  test-bytes-shift-right.cpp  test-compare.cpp  test-compare2.cpp  test-compare3.cpp  test-dec-corner-case.cpp  test-dec.cpp  test-div.cpp  test-ehbigint-private-utils.cpp  test-ehbigint-private-utils.h  test-equals.cpp  test-exp-mod.cpp  test-exp.cpp  test-from-binstr-to-binstr-round-trip.cpp  test-from-decimal-to-decimal-round-trip.cpp  test-from-hex-to-hex-round-trip.cpp  test-inc-l.cpp  test-inc.cpp  test-is-probably-prime.cpp  test-mul.cpp  test-n-choose-k.cpp  test-scenario-mul-mod.cpp  test-set-l.cpp  test-subtract.cpp
ehbigint_arduino_tests_slow/: eba.cpp  eba.h  ehbigint.cpp  ehbigint_arduino_tests_slow.ino  ehstr.h  test-sqrt.cpp
misc/: pre-tidy.patch
src/: ehbigint-arduino.h  ehbigint-eba.c  ehbigint-eba.h  ehbigint-error.h  ehbigint-log.c  ehbigint-log.h  ehbigint-malloc.c  ehbigint-malloc.h  ehbigint-priv.c  ehbigint-priv.h  ehbigint-str.c  ehbigint-str.h  ehbigint-util-arduino.cpp  ehbigint-util.c  ehbigint-util.h  ehbigint.c  ehbigint.h  ehstr.c  ehstr.h
tests/: echeck.h  test-add.c  test-bytes-shift-left.c  test-bytes-shift-right.c  test-comp-exp-mod-with-gmp.c  test-comp-mul-with-gmp.c  test-compare-with-gmp.c  test-compare.c  test-compare2.c  test-compare3.c  test-dec-corner-case.c  test-dec.c  test-div.c  test-ehbigint-private-utils.c  test-ehbigint-private-utils.h  test-ehbigint.c  test-equals.c  test-exp-mod.c  test-exp.c  test-from-binstr-to-binstr-round-trip.c  test-from-decimal-to-decimal-round-trip.c  test-from-hex-to-hex-round-trip.c  test-inc-l.c  test-inc-ul.c  test-inc.c  test-is-probably-prime.c  test-mul.c  test-n-choose-k.c  test-scenario-mul-mod.c  test-set-l.c  test-set-ul.c  test-set.c  test-shift-left.c  test-shift-right.c  test-sqrt.c  test-subtract.c  test-to-string.c
